<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="264dp"
            android:layout_height="73dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="54dp"
            android:fontFamily="cursive"
            android:text="Madharchod"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="264dp"
            android:layout_height="109dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="54dp"
            android:fontFamily="cursive"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textSize="100sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="138dp"
            android:layout_marginBottom="16dp"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_user_signed_in"
            android:layout_width="294dp"
            android:layout_height="29dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="294dp"
            android:layout_marginEnd="39dp"
            android:text="@string/signed_in_as"
            android:textAlignment="center"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>