<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/contrasting_yellow_orange"

    tools:context=".taskbarFragments.HomePageFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/top_bar_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orangetintAnime"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/uni_logo"
                android:layout_width="106dp"
                android:layout_height="46dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/university_of_entropy_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/message_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar_cardview"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="Hey Light, don't forget your umbrella "
        android:textSize="28sp"
        android:textStyle="italic" />

    <androidx.cardview.widget.CardView
        android:id="@+id/currentweather_Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_txt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#FAF9F6"
        app:cardCornerRadius="45dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/current_weather_imagev"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:contentDescription="Current weather emoji"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/rain" />

                <TextView
                    android:id="@+id/temp_degrees_txt"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-25dp"

                    android:fontFamily="@font/bangers"
                    android:gravity="center"
                    android:text="@string/fourteen_degrees"
                    android:textSize="70sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/current_weather_imagev" />

                <TextView
                    android:id="@+id/weater_type_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:fontFamily="@font/anton"
                    android:gravity="center"
                    android:text="Rainy"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temp_degrees_txt" />

                <TextView
                    android:id="@+id/weather_max_min_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anton"
                    android:gravity="center"
                    android:text="@string/max_14_min_5_temp"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weater_type_txt" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weather_max_min_txt">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:src="@drawable/icon_location" />

                    <TextView
                        android:id="@+id/weather_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/anton"
                        android:gravity="center"
                        android:text="@string/university"
                        android:textSize="15sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tutors_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentweather_Card"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#FAF9F6"
        app:cardCornerRadius="45dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tutors_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anton"
                    android:gravity="center"
                    android:text="Queries? Ask Tutors"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_underTutor"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/contrasting_yellow_orange"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tutors_txt" />

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_underTutor">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="14dp"
                            android:layout_marginEnd="3dp"
                            android:layout_weight="1"
                            android:src="@drawable/male_teacher_ai_generated_craiyon" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="14dp"
                            android:layout_weight="1"
                            android:text="Mr Thomson"
                            android:textAlignment="center"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="3dp"
                            android:layout_marginTop="14dp"
                            android:layout_weight="1"
                            android:src="@drawable/female_teacher2_ai_generated_craiyon" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="14dp"
                            android:layout_weight="1"
                            android:text="Miss Abigail"
                            android:textAlignment="center"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="3dp"
                            android:layout_marginTop="14dp"
                            android:layout_weight="1"
                            android:src="@drawable/female_teacher_ai_generated_craiyon" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="14dp"
                            android:layout_weight="1"
                            android:text="Miss Hinami"
                            android:textAlignment="center"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>